# real-time-media-extensions

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  go.mod  go.sum  main.go
.github/workflows/: build-publish-docker.yml  build.yml  deploy-to-github-pages.yml
cmake/: awstranscribe.cmake  macros.cmake
docs/: docusaurus.config.js  sidebars.js
docs/docs/: Configuration-parameters.md  Introduction.md
docs/docs/Applications/: Live-transcription.md
docs/docs/Applications/Live Transcription/: aws-transcribe.md  gladia-io.md
docs/docs/Building Running RTME natively/: Building.md  Running.md
docs/docs/Installing and executing/: Docker-container.md  Linux-executable.md
docs/docs/Installing and executing/Linux/: Building.md  Modifying-components.md  Running-natively.md
docs/docs/applications/: Live-transcription.md
docs/src/css/: custom.css
docs/src/pages/: index.tsx
k8s/: transcription.yaml
pkg/common/: common.go
pkg/messenger/: messenger.go
setup/: build.sh  docker.sh  linux.sh  local_defaults.sh  transcription.sh
setup/internal/: dolbyiosdk_internal.sh  linux.sh
setup/sdks/: awssdk.sh
src/: CMakeLists.txt  live_transcription.cc  live_transcription.h  package_config.cmake.in  sample_code_plugin.cc
src/extensions/transcription/: CMakeLists.txt
src/extensions/transcription/interfaces/: transcription_listener.cc  transcription_listener.h  transcription_service.cc  transcription_service.h
src/extensions/transcription/plugin/: interactor.cc  interactor.h  live_transcription.cc  live_transcription.h
src/extensions/transcription/speech_to_text/: conference_tracker.cc  conference_tracker.h  file_writer.cc  file_writer.h  speech_to_text.cc  speech_to_text.h  transcribe_common.cc  transcribe_common.h
src/extensions/transcription/speech_to_text/aws/: aws_transcribe.cc  aws_transcribe.h  json_value.cc  json_value.h
src/extensions/transcription/speech_to_text/buffer/: audio_ringbuffer.cc  audio_ringbuffer.h  ringbuffer.cc  ringbuffer.h  vad_bitmap.cc  vad_bitmap.h
src/extensions/transcription/speech_to_text/gladia/: gladia.cc  gladia.h
src/interfaces/: logger.cc  logger.h  transcription_listener.cc  transcription_listener.h  transcription_service.cc  transcription_service.h
src/plugin/: rtme_plugin.cc  rtme_plugin_type.h
src/pulse_audio/: CMakeLists.txt
src/pulse_audio/src/: pulse_audio.cpp  pulse_audio.map
src/speech_to_text/: conference_tracker.cc  conference_tracker.h  processing_thread.cc  processing_thread.h  speech_to_text.cc  speech_to_text.h  transcribe_common.cc  transcribe_common.h
src/speech_to_text/aws/: aws_transcribe.cc  aws_transcribe.h  json_value.cc  json_value.h
src/speech_to_text/buffer/: audio_ringbuffer.cc  audio_ringbuffer.h  ringbuffer.cc  ringbuffer.h  vad_bitmap.cc  vad_bitmap.h
src/speech_to_text/gladia/: gladia.cc  gladia.h
src/utils/: CMakeLists.txt  async_accumulator.cc  async_accumulator.h  file_writer.cc  file_writer.h  logger.cc  logger.h  processing_thread.cc  processing_thread.h  signal_handler.cc  signal_handler.h  wrap_move_only_object.h
